[gd_scene load_steps=10 format=3 uid="uid://coras6tgh04h5"]

[ext_resource type="Script" uid="uid://cg7h0owded255" path="res://Scenes/Unit/unit.gd" id="1_15sed"]
[ext_resource type="Texture2D" uid="uid://b804rgdbdcbwx" path="res://Assets/rogues.png" id="1_hgpyh"]
[ext_resource type="Resource" uid="uid://cu4dgk3miuwt5" path="res://Data/Units/bram.tres" id="2_2itl1"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://Assets/shaders/2d_outline_shader.tres" id="3_ulevp"]
[ext_resource type="Script" uid="uid://dsyg84iqicbhl" path="res://Components/drag_and_drop.gd" id="4_iuf4a"]
[ext_resource type="Script" uid="uid://d077xoc6cueo6" path="res://Components/packed_sprite2d.gd" id="5_2itl1"]
[ext_resource type="PackedScene" uid="uid://c1whvt3bdqgxe" path="res://Scenes/health_bar/health_bar.tscn" id="5_kakeo"]
[ext_resource type="Script" uid="uid://dye12q485wwdu" path="res://Components/outline_highlighter.gd" id="6_jbdwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgpyh"]
size = Vector2(36, 36)

[node name="Unit" type="Area2D" groups=["Units"]]
script = ExtResource("1_15sed")
stats = ExtResource("2_2itl1")
metadata/_edit_group_ = true

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("3_ulevp")

[node name="Skin" type="Sprite2D" parent="Visuals"]
position = Vector2(16, 8)
texture = ExtResource("1_hgpyh")
region_enabled = true
region_rect = Rect2(0, 192, 32, 32)
script = ExtResource("5_2itl1")
coordinates = Vector2i(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_hgpyh")

[node name="HealthBar" parent="." instance=ExtResource("5_kakeo")]

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_iuf4a")
target = NodePath("..")
pickup_offset = 5.0

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("6_jbdwb")
visuals = NodePath("../Visuals")
outline_color = Color(1, 1, 1, 1)
outline_thickness = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
